--- a/aikau/pom.xml
+++ b/aikau/pom.xml
@@ -4,15 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.softwareloop</groupId>
-    <artifactId>upload-meta-aikau</artifactId>
-    <name>upload-meta-aikau</name>
+    <artifactId>uploader-plus-aikau</artifactId>
+    <name>uploader-plus-aikau</name>
     <packaging>amp</packaging>
-    <description>Upload-meta AMP using the Aikau framework for Share 5.0.x</description>
+    <description>uploader-plus AMP using the Aikau framework for Share 5.0.x</description>
     <url>http://softwareloop.com/</url>
 
     <parent>
         <groupId>com.softwareloop</groupId>
-        <artifactId>upload-meta</artifactId>
+        <artifactId>uploader-plus</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
