--- a/repo/pom.xml
+++ b/repo/pom.xml
@@ -3,16 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.softwareloop</groupId>
-    <artifactId>upload-meta-repo</artifactId>
-    <name>upload-meta-repo</name>
+    <artifactId>uploader-plus-repo</artifactId>
+    <name>uploader-plus-repo</name>
     <packaging>amp</packaging>
-    <description>Upload-meta AMP for Alfresco repository 4.2.x or 5.0.x</description>
+    <description>uploader-plus AMP for Alfresco repository 4.2.x or 5.0.x</description>
     <url>http://softwareloop.com/</url>
 
     <parent>
         <groupId>com.softwareloop</groupId>
-        <artifactId>upload-meta</artifactId>
+        <artifactId>uploader-plus</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
