close #6 Admin: populate upload folders datatable

--- a/surf/src/main/amp/config/alfresco/web-extension/site-webscripts/uploader-plus/uploader-plus-admin.get.properties
+++ b/surf/src/main/amp/config/alfresco/web-extension/site-webscripts/uploader-plus/uploader-plus-admin.get.properties
@@ -5,3 +5,4 @@ title.actions = Actions
 loading.folders = Loading folders
 no.folders.found = No folders found
 upload.folders = Upload folders
+open.in.repository=Open in repository
