close #8 admin: upload folder delete

--- a/surf/src/main/amp/config/alfresco/web-extension/site-webscripts/uploader-plus/uploader-plus-admin.get.properties
+++ b/surf/src/main/amp/config/alfresco/web-extension/site-webscripts/uploader-plus/uploader-plus-admin.get.properties
@@ -6,3 +6,5 @@ loading.folders = Loading folders
 no.folders.found = No folders found
 upload.folders = Upload folders
 open.in.repository=Open in repository
+operation.completed.successfully = Operation completed successfully
+operation.failed = Operation failed
