close #11: Admin: new upload folder

--- a/surf/src/main/amp/config/alfresco/web-extension/site-webscripts/uploader-plus/uploader-plus-admin.get.properties
+++ b/surf/src/main/amp/config/alfresco/web-extension/site-webscripts/uploader-plus/uploader-plus-admin.get.properties
@@ -8,3 +8,5 @@ upload.folders = Upload folders
 open.in.repository=Open in repository
 operation.completed.successfully = Operation completed successfully
 operation.failed = Operation failed
+select.the.upload.folder=Select the upload folder
+new.upload.folder=New upload folder
