close #17: Admin: check that duplicate upload folders are not added

--- a/surf/src/main/amp/config/alfresco/web-extension/site-webscripts/uploader-plus/uploader-plus-admin.get.properties
+++ b/surf/src/main/amp/config/alfresco/web-extension/site-webscripts/uploader-plus/uploader-plus-admin.get.properties
@@ -10,3 +10,4 @@ operation.completed.successfully = Operation completed successfully
 operation.failed = Operation failed
 select.the.upload.folder=Select the upload folder
 new.upload.folder=New upload folder
+_.is.already.an.upload.folder={path} is already an upload folder
