--- a/surf/src/main/amp/config/alfresco/web-extension/messages/uploader-plus.properties
+++ b/surf/src/main/amp/config/alfresco/web-extension/messages/uploader-plus.properties
@@ -1,3 +1,5 @@
 tool.uploader-plus-admin.label=Uploader Plus
 tool.uploader-plus-admin.description=Uploader Plus
 aspect.up_UploadFolder=Upload folder
+content.type=Content type
+uploader.plus.next=Next
