--- a/repo/pom.xml
+++ b/repo/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>uploader-plus-repo</artifactId>
     <name>uploader-plus-repo</name>
     <packaging>amp</packaging>
-    <description>uploader-plus AMP for Alfresco repository 4.2.x or 5.0.x</description>
+    <description>uploader-plus AMP for Alfresco repository 4.2.x</description>
     <url>http://softwareloop.com/</url>
 
     <parent>
