--- a/aikau/pom.xml
+++ b/aikau/pom.xml
@@ -6,13 +6,14 @@
     <artifactId>uploader-plus-aikau</artifactId>
     <name>uploader-plus-aikau</name>
     <packaging>amp</packaging>
-    <description>uploader-plus AMP using the Aikau framework for Share 5.0.x</description>
+    <description>uploader-plus AMP using the Aikau framework for Share 5.0.x
+    </description>
     <url>http://softwareloop.com/</url>
 
     <parent>
         <groupId>com.softwareloop</groupId>
         <artifactId>uploader-plus</artifactId>
-        <version>1.0</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <properties>
