close #59 Cannot access metadata service on Alfresco 5.0.a and 5.0.b

--- a/repo/pom.xml
+++ b/repo/pom.xml
@@ -21,4 +21,18 @@
         <alfresco.client.contextPath>/alfresco</alfresco.client.contextPath>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>${alfresco.groupId}</groupId>
+            <artifactId>alfresco-repository</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 </project>
