--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,8 @@
         <alfresco.version>4.2.f</alfresco.version>
         <app.log.root.level>WARN</app.log.root.level>
         <alfresco.client.war.groupId>org.alfresco</alfresco.client.war.groupId>
-        <alfresco.client.war.version>4.2.f</alfresco.client.war.version>
+        <alfresco.client.war.version>${alfresco.version}
+        </alfresco.client.war.version>
         <env>local</env>
     </properties>
 
@@ -61,16 +62,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <dependencies>
-        <!-- Test dependencies -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.1</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 
     <build>
         <plugins>
