--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.softwareloop</groupId>
     <artifactId>uploader-plus</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
     <name>uploader-plus</name>
     <packaging>pom</packaging>
     <description>An Alfresco uploader that prompts for metadata</description>
