--- a/repo/pom.xml
+++ b/repo/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>com.softwareloop</groupId>
         <artifactId>uploader-plus</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1</version>
     </parent>
 
     <properties>
