--- a/repo/pom.xml
+++ b/repo/pom.xml
@@ -6,13 +6,14 @@
     <artifactId>uploader-plus-repo</artifactId>
     <name>uploader-plus-repo</name>
     <packaging>amp</packaging>
-    <description>uploader-plus AMP for Alfresco repository 4.2.x</description>
+    <description>uploader-plus AMP for Alfresco repository 4.2.x and 5.0.x
+    </description>
     <url>http://softwareloop.com/</url>
 
     <parent>
         <groupId>com.softwareloop</groupId>
         <artifactId>uploader-plus</artifactId>
-        <version>1.1</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
 
     <properties>
