--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,8 @@
     </parent>
 
     <modules>
-        <module>repo-amp</module>
-        <module>repo-war</module>
-        <module>surf-amp</module>
-        <module>surf-war</module>
-        <module>solr</module>
-        <module>runner</module>
+        <module>repo</module>
+        <module>surf</module>
         <!-- coming soon
         <module>aikau</module>
         -->
