--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.softwareloop</groupId>
     <artifactId>uploader-plus</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
     <packaging>pom</packaging>
 
     <name>uploader-plus</name>
@@ -25,7 +23,8 @@
         <connection>scm:git:git@github.com:softwareloop/uploader-plus.git</connection>
         <developerConnection>scm:git:git@github.com:softwareloop/uploader-plus.git</developerConnection>
         <url>git@github.com:softwareloop/uploader-plus.git</url>
-    </scm>
+      <tag>v1.2</tag>
+  </scm>
 
     <developers>
         <developer>
