--- a/repo/pom.xml
+++ b/repo/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>com.softwareloop</groupId>
         <artifactId>uploader-plus</artifactId>
-        <version>1.2</version>
+        <version>1.3-SNAPSHOT</version>
     </parent>
 
     <properties>
