--- a/surf/pom.xml
+++ b/surf/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>com.softwareloop</groupId>
         <artifactId>uploader-plus</artifactId>
-        <version>1.2</version>
+        <version>1.3-SNAPSHOT</version>
     </parent>
 
     <properties>
