Port to SDK 2.2.0 and Alfresco 5.1.e

--- a/repo/src/test/resources/log4j.properties
+++ b/repo/src/test/resources/log4j.properties
@@ -243,7 +243,7 @@ log4j.logger.org.alfresco.repo.web.scripts=warn
 log4j.logger.org.alfresco.repo.web.scripts.BaseWebScriptTest=info
 log4j.logger.org.alfresco.repo.web.scripts.AlfrescoRhinoScriptDebugger=off
 log4j.logger.org.alfresco.repo.jscript=error
-log4j.logger.org.alfresco.repo.jscript.ScriptLogger=debug
+log4j.logger.org.alfresco.repo.jscript.ScriptLogger=warn
 log4j.logger.org.alfresco.repo.cmis.rest.CMISTest=info
 
 log4j.logger.org.alfresco.repo.avm.actions=info
