--- a/surf/pom.xml
+++ b/surf/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.softwareloop</groupId>
     <artifactId>uploader-plus-surf</artifactId>
-    <version>1.4-SNAPSHOT</version>
+    <version>1.4</version>
     <name>uploader-plus-surf</name>
     <packaging>amp</packaging>
     <description>uploader-plus AMP using the Surf framework for Share 5.1.x</description>
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.softwareloop</groupId>
         <artifactId>uploader-plus</artifactId>
-        <version>1.4-SNAPSHOT</version>
+        <version>1.4</version>
     </parent>
 
     <!-- 
