Added the concept of proxy types used to create cm:content with aspects containing custom metadata from a type in the data model. These types should never be created directly but only used when uploading data

--- a/surf/src/main/amp/config/alfresco/site-webscripts/com/softwareloop/uploader-plus/uploader-plus-admin.get.properties
+++ b/surf/src/main/amp/config/alfresco/site-webscripts/com/softwareloop/uploader-plus/uploader-plus-admin.get.properties
@@ -1,5 +1,6 @@
 title.path = Path
 title.allowed.types = Allowed types
+title.allowed.proxyTypes= Allowed proxy types
 title.actions = Actions
 loading.folders = Loading folders
 no.folders.found = No folders found
