--- a/surf/src/main/amp/config/alfresco/messages/uploader-plus.properties
+++ b/surf/src/main/amp/config/alfresco/messages/uploader-plus.properties
@@ -3,3 +3,4 @@ tool.uploader-plus-admin.description=Uploader Plus
 aspect.up_UploadFolder=Upload folder
 content.type=Content type
 uploader.plus.next=Next
+uploader.plus.applyToAll=Apply the same metadata set to all files
