--- a/repo/pom.xml
+++ b/repo/pom.xml
@@ -2,9 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.softwareloop</groupId>
     <artifactId>uploader-plus-repo</artifactId>
-    <version>1.4</version>
     <name>uploader-plus-repo</name>
     <packaging>amp</packaging>
     <description>uploader-plus AMP for Alfresco repository 5.1.x</description>
@@ -13,7 +11,7 @@
     <parent>
         <groupId>com.softwareloop</groupId>
         <artifactId>uploader-plus</artifactId>
-        <version>1.4</version>
+        <version>1.5-SNAPSHOT</version>
     </parent>
 
     <!-- 
