Added Younes Regaieg as contributor.

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,10 @@
             <name>Alexander Mahabir</name>
             <url>https://github.com/alex4u2nv</url>
         </contributor>
+        <contributor>
+            <name>Younes Regaieg</name>
+            <url>https://github.com/yregaieg</url>
+        </contributor>
     </contributors>
 
     <parent>
