--- a/surf/pom.xml
+++ b/surf/pom.xml
@@ -5,7 +5,7 @@
     <name>uploader-plus-surf</name>
     <packaging>amp</packaging>
     <description>uploader-plus AMP using the Surf framework for Share 5.1.x</description>
-	<url>http://softwareloop.com/</url>
+	<url>https://github.com/softwareloop/uploader-plus</url>
 	
     <parent>
         <groupId>com.softwareloop</groupId>
