--- a/repo/pom.xml
+++ b/repo/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>uploader-plus-repo</artifactId>
     <name>uploader-plus-repo</name>
     <packaging>amp</packaging>
-    <description>uploader-plus AMP for Alfresco repository 5.1.x</description>
+    <description>uploader-plus AMP for Alfresco repository</description>
     <url>https://github.com/softwareloop/uploader-plus</url>
 
     <parent>
