--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.softwareloop</groupId>
     <artifactId>uploader-plus</artifactId>
-    <version>1.6-SNAPSHOT</version>
+    <version>1.6</version>
     <packaging>pom</packaging>
 
     <name>uploader-plus</name>
@@ -23,7 +23,7 @@
         <connection>scm:git:git@github.com:softwareloop/uploader-plus.git</connection>
         <developerConnection>scm:git:git@github.com:softwareloop/uploader-plus.git</developerConnection>
         <url>git@github.com:softwareloop/uploader-plus.git</url>
-      <tag>HEAD</tag>
+      <tag>v1.6</tag>
   </scm>
 
     <developers>
