--- a/surf/pom.xml
+++ b/surf/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.softwareloop</groupId>
         <artifactId>uploader-plus</artifactId>
-        <version>1.6-SNAPSHOT</version>
+        <version>1.6</version>
     </parent>
 
     <!-- 
