[maven-release-plugin] prepare for next development iteration

--- a/repo/pom.xml
+++ b/repo/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.softwareloop</groupId>
         <artifactId>uploader-plus</artifactId>
-        <version>1.6</version>
+        <version>1.7-SNAPSHOT</version>
     </parent>
 
     <!-- 
