Updated list of contributors

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,18 @@
             <name>Younes Regaieg</name>
             <url>https://github.com/yregaieg</url>
         </contributor>
+        <contributor>
+            <name>Roxana Angheluta</name>
+            <url>https://github.com/anghelutar</url>
+        </contributor>
+        <contributor>
+            <name>tomasrgar</name>
+            <url>https://github.com/tomasrgar</url>
+        </contributor>
+        <contributor>
+            <name>Tom Vandepoele</name>
+            <url>https://github.com/tom-vandepoele</url>
+        </contributor>
     </contributors>
 
     <parent>
