--- a/repo/pom.xml
+++ b/repo/pom.xml
@@ -77,6 +77,28 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>${alfresco.groupId}</groupId>
+            <artifactId>alfresco-remote-api</artifactId>
+            <exclusions>
+               <exclusion>
+                  <groupId>org.springframework.social</groupId>
+                  <artifactId>*</artifactId>
+               </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>${alfresco.groupId}</groupId>
+            <artifactId>alfresco-repository</artifactId>
+            <exclusions>
+               <exclusion>
+                  <groupId>org.springframework.social</groupId>
+                  <artifactId>*</artifactId>
+               </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
     <profiles>
