--- a/uploader-plus-share/pom.xml
+++ b/uploader-plus-share/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>uploader-plus-share</artifactId>
-    <name>Alfresco Share JAR Module</name>
+    <name>Uploader Plus Alfresco Share JAR Module</name>
     <packaging>jar</packaging>
-    <description>Sample Share JAR Module (to be included in the share.war) - part of AIO - SDK 4.5</description>
+    <description>Share JAR Module (to be included in the share.war) for Uploader Plus</description>
 
     <parent>
         <groupId>com.softwareloop.uploderplus</groupId>
